--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "daisyui": "^5.0.46",
     "lucide-react": "^0.525.0",
+    "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -31,7 +33,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "vite": "^7.0.4"
   }
 }
