--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
-    "router-dom": "^3.0.3"
+    "router-dom": "^3.0.3",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -33,7 +34,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "tailwindcss": "^3.4.18",
     "vite": "^7.0.4"
   }
 }
